--- a/src/content-script/styles.scss
+++ b/src/content-script/styles.scss
@@ -2,10 +2,10 @@
 @import 'dark.scss';
 
 .chat-gpt-container {
-  margin-bottom: 30px;
-  flex-basis: 0;
-  flex-grow: 1;
-  z-index: 1;
+  margin-bottom: 30px; // 
+  flex-basis: 0; // initial size 
+  flex-grow: 1; // grow to fill space
+  z-index: 1; // make sure it's on top of the chat
 
   .chat-gpt-card {
     border: 1px solid;
